# sotfs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  after.dot  before.dot  justfile
.github/workflows/: ci.yml  coverage.yml  formal.yml  fuzz.yml  release.yml
docs/: graph-hunter-schema.md  hax-spike.md  known-issues.md  state.md
docs/book/: README.md  colors.sty  envs.sty  latexmkrc  macros.sty  main.tex  preamble.sty  refs.bib  sotfsbook.cls
docs/book/06-sotfs/: 17-fs-modelo.tex  18-fs-tx.tex
docs/book/appendices/: ap-A-invariantes.tex  ap-B-dpo-tablas.tex  ap-C-tlc-results.tex  ap-D-setup.tex  ap-E-soluciones.tex
docs/book/chapters/: cap-01-intro.tex  cap-02-prelim.tex  cap-03-typegraph.tex  cap-04-hashing.tex  cap-05-dpo.tex  cap-06-implementacion.tex  cap-07-persistencia.tex  cap-08-capabilities.tex  cap-09-transacciones.tex  cap-10-tla.tex  cap-11-coq.tex  cap-12-topologia.tex  cap-13-decepcion.tex  cap-14-fuse.tex
docs/book/frontmatter/: copyright.tex  notacion.tex  prefacio.tex  titlepage.tex  toc.tex
examples/: persistent_mount.sh
formal/: README.md  run_tlc.sh  sotfs_capabilities.cfg  sotfs_capabilities.tla  sotfs_capabilities_large.cfg  sotfs_capabilities_medium.cfg  sotfs_crash.cfg  sotfs_crash.tla  sotfs_crash_large.cfg  sotfs_crash_medium.cfg  sotfs_crash_refinement.cfg  sotfs_crash_refinement.tla  sotfs_curvature.cfg  sotfs_curvature.tla  sotfs_graph.cfg  sotfs_graph.tla  sotfs_graph_large.cfg  sotfs_graph_medium.cfg  sotfs_transactions.cfg  sotfs_transactions.tla  sotfs_transactions_large.cfg  sotfs_transactions_medium.cfg
formal/coq/: .DpoCreate.aux  .DpoLink.aux  .DpoMkdir.aux  .DpoRename.aux  .DpoRmdir.aux  .DpoUnlink.aux  .SotfsGraph.aux  .lia.cache  DpoCreate.glob  DpoCreate.v  DpoCreate.vo  DpoLink.glob  DpoLink.v  DpoMkdir.glob  DpoMkdir.v  DpoRename.glob  DpoRename.v  DpoRmdir.glob  DpoRmdir.v  DpoUnlink.glob  DpoUnlink.v  SotfsGraph.glob  SotfsGraph.v  SotfsGraph.vo  _CoqProject
formal/coq/.coq-native/: NSotFS_DpoCreate.cmi  NSotFS_DpoCreate.cmx  NSotFS_DpoCreate.cmxs  NSotFS_SotfsGraph.cmi  NSotFS_SotfsGraph.cmx  NSotFS_SotfsGraph.cmxs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cap_table.rs  fuzz_dir_name_idx.rs  fuzz_ipc_parser.rs  fuzz_op_sequence.rs  fuzz_path_resolution.rs  fuzz_tx_sequence.rs
man/: sotfs-fuse.1
scripts/: coverage_gate.py
sotfs-cli/: Cargo.toml
sotfs-cli/src/: main.rs
sotfs-cli/tests/: dot_and_export.rs  sotfsctl_integration.rs
sotfs-experimental/: Cargo.toml
sotfs-experimental/src/: lib.rs
sotfs-fuse/: Cargo.toml
sotfs-fuse/src/: fs.rs  lib.rs  main.rs
sotfs-fuse/tests/: cli_args.rs  mount_integration.rs
sotfs-graph/: Cargo.toml
sotfs-graph/src/: arena.rs  error.rs  export.rs  graph.rs  lib.rs  provenance.rs  rcu.rs  types.rs  typestate.rs
sotfs-graph/tests/: cap_ctx.rs  error_display.rs  graph_api.rs  graph_hunter_export.rs  types_methods.rs
sotfs-monitor/: Cargo.toml
sotfs-monitor/benches/: monitor_bench.rs
sotfs-monitor/src/: curvature.rs  deception.rs  lib.rs  treewidth.rs
sotfs-monitor/tests/: adversarial.rs
sotfs-ops/: Cargo.toml
sotfs-ops/benches/: comparison_bench.rs  dpo_bench.rs  scale_bench.rs  wal_bench.rs
sotfs-ops/examples/: custom_dpo_rule.rs  idx_check.rs
sotfs-ops/src/: lib.rs
sotfs-ops/tests/: acl_cap_edges.rs  cap_admission.rs  export_full.rs  graph_helpers.rs  invariants_match_coq.rs  proptest_ops.proptest-regressions  proptest_ops.rs  provenance_integration.rs  quota_integration.rs  regression_ops.rs
sotfs-storage/: Cargo.toml
sotfs-storage/src/: backend.rs  lib.rs
sotfs-storage/tests/: crash.rs
sotfs-tx/: Cargo.toml
sotfs-tx/src/: lib.rs
sotfs-tx/tests/: concurrency.rs
