[workspace]
resolver = "2"
members = [
    "sotfs-graph",
    "sotfs-storage",
    "sotfs-ops",
    "sotfs-tx",
    "sotfs-fuse",
    "sotfs-monitor",
    "sotfs-cli",
    "sotfs-experimental",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
authors = ["Lucas Sotomayor <lucas@base4.io>"]
license = "MIT"
repository = "https://github.com/sotomayorlucas/sotfs"
readme = "README.md"
description = "sotFS — content-addressed type-graph filesystem with DPO rewrites"

[workspace.dependencies]
sotfs-graph = { path = "sotfs-graph", default-features = false }
sotfs-storage = { path = "sotfs-storage" }
sotfs-ops = { path = "sotfs-ops" }
sotfs-tx = { path = "sotfs-tx" }
sotfs-cli = { path = "sotfs-cli" }
thiserror = "1"
serde = { version = "=1.0.219", default-features = false, features = ["derive", "alloc"] }
