[package]
name = "sotfs-cli"
description = "Command-line tool for sotFS — DOT export of before/after DPO rewrites"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "sotfs-dot"
path = "src/main.rs"

[[bin]]
name = "sotfsctl"
path = "src/bin/sotfsctl.rs"

[[bin]]
name = "sotfs-export-hunter"
path = "src/bin/export_hunter.rs"

[dependencies]
sotfs-graph = { workspace = true, default-features = false, features = ["std"] }
sotfs-ops = { workspace = true }
sotfs-storage = { workspace = true }
serde_json = "1"
