[package]
name = "sotfs-graph"
description = "Type graph data structures for sotFS"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = ["serde/std", "thiserror"]

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
